syntax = "proto3";

package birthdaypb;

service Birthday {
    rpc SetBirthday(SetBirthdayRequest) returns (SetBirthdayReply) {}
}

message SetBirthdayRequest {
    string serverId = 1;
    string userId = 2;
    int32 month = 3;
    int32 day = 4;
}

message UserBirthday {
    string id = 1;
    string serverId = 2;
    string userId = 3;
    int32 month = 4;
    int32 day = 5;
}

message SetBirthdayReply {
    UserBirthday birthday = 1;
}
